--- a/integration/scss/abstracts/_variables.scss
+++ b/integration/scss/abstracts/_variables.scss
@@ -1,6 +1,26 @@
+$color-primary: #6fb4fd;
+$color-secondary: #8d82c4;
+$color-tertiary: #242943;
+$color-quaternary: #ebf0fb;
+$color-quinary: #e56555;
+$color-senary: #de9d5e;
+$color-septenary: #6489df;
+$color-octonary: #65b48a;
+
+$color-background: #e7e7e7;
+$color-background-block: #fff;
+$color-background-banner: #000;
+
+$color-text-primary: #000;
+$color-text-secondary: #fff;
+
 $font-size: 1rem;
 $font-size-large: 1.5rem;
+$font-size-very-large: 2rem;
 $font-size-small: 0.9rem;
+
+$line-height: 1.5rem;
+$line-height-very-large: 3rem;
 
 $gutter: 1rem;
 $gutter-large: $gutter * 2;
