--- a/integration/scss/main.scss
+++ b/integration/scss/main.scss
@@ -3,4 +3,6 @@
 @import "../node_modules/font-awesome/scss/font-awesome";
 @import "components/banner";
 @import "components/button";
+@import "components/post-excerpt";
+@import "components/post-list";
 
