--- a/integration/scss/main.scss
+++ b/integration/scss/main.scss
@@ -1,6 +1,7 @@
 @import "abstracts/variables";
 @import "../node_modules/reset-css/sass/reset";
 @import "../node_modules/font-awesome/scss/font-awesome";
+@import "base/base";
 @import "components/banner";
 @import "components/button";
 @import "components/post-excerpt";
