--- a/integration/scss/main.scss
+++ b/integration/scss/main.scss
@@ -4,6 +4,10 @@
 @import "base/base";
 @import "components/banner";
 @import "components/button";
+@import "components/header";
+@import "components/logo";
+@import "components/menu";
+@import "components/overlay";
 @import "components/post-excerpt";
 @import "components/post-list";
 
