--- a/integration/scss/abstracts/_variables.scss
+++ b/integration/scss/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $post-excerpt-background-colors: (
     $color-octonary
 );
 
+$duration-fast: .25s;
 $duration-slow: 2s;
 
 $fa-font-path: "../node_modules/font-awesome/fonts";
