--- a/integration/scss/components/_banner.scss
+++ b/integration/scss/components/_banner.scss
@@ -53,7 +53,8 @@
             to right,
              rgba($color-background-banner,0.75),
              rgba($color-background-banner,0.75) 50%,
-               transparent);
+             rgba($color-background-banner,0.6) 75%,
+             rgba($color-background-banner,0.4) 100%);
         content:'';
         z-index: -1;
         position:absolute;
