--- a/integration/scss/main.scss
+++ b/integration/scss/main.scss
@@ -4,6 +4,8 @@
 @import "base/base";
 @import "components/banner";
 @import "components/button";
+@import "components/carousel";
+@import "components/comment";
 @import "components/header";
 @import "components/logo";
 @import "components/menu";
